RESOLVED FIXED219136
[TextureMapper] REGRESSION(r269570): mask layer doesn't clip descendent layers
https://bugs.webkit.org/show_bug.cgi?id=219136
Summary [TextureMapper] REGRESSION(r269570): mask layer doesn't clip descendent layers
Fujii Hironori
Reported 2020-11-18 17:05:12 PST
Created attachment 414518 [details] test case [TextureMapper] REGRESION(r269570): mask layer doesn't clip children layer
Attachments
test case (592 bytes, text/html)
2020-11-18 17:05 PST, Fujii Hironori
no flags
test case 2 (621 bytes, text/html)
2020-11-18 17:56 PST, Fujii Hironori
no flags
WIP patch (2.41 KB, patch)
2020-12-10 13:14 PST, Fujii Hironori
no flags
Patch (6.52 KB, patch)
2020-12-10 17:03 PST, Fujii Hironori
no flags
Patch (6.74 KB, patch)
2020-12-10 18:10 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2020-11-18 17:07:44 PST
attachment#412505 [details] is another test case.
Fujii Hironori
Comment 2 2020-11-18 17:56:49 PST
Created attachment 414522 [details] test case 2 Umm, this is not a simple regression. Even before r269570, it renders a red area.
Radar WebKit Bug Importer
Comment 3 2020-11-25 21:34:57 PST
Fujii Hironori
Comment 4 2020-12-10 13:14:15 PST
Created attachment 415918 [details] WIP patch
Fujii Hironori
Comment 5 2020-12-10 17:01:32 PST
(In reply to Fujii Hironori from comment #2) > Created attachment 414522 [details] > test case 2 Filed another bug ticket for the case. Bug 219764 – [TextureMapper] Rotated mask layers don't clip descendent layers correctly
Fujii Hironori
Comment 6 2020-12-10 17:03:57 PST
Fujii Hironori
Comment 7 2020-12-10 18:10:48 PST
Fujii Hironori
Comment 8 2020-12-11 12:07:26 PST
Comment on attachment 415954 [details] Patch Clearing flags on attachment: 415954 Committed r270698: <https://trac.webkit.org/changeset/270698>
Fujii Hironori
Comment 9 2020-12-11 12:07:29 PST
All reviewed patches have been landed. Closing bug.
Fujii Hironori
Comment 10 2020-12-11 12:10:17 PST
*** Bug 219673 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.